Fix x overflow from Google Comments on small screens

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -2,6 +2,14 @@
 # Sass file with custom styles
 ---
 
+body
+{
+    top: 0;
+    left: 0;
+    width: 100%;
+    overflow-x: hidden;
+}
+
 .site-wrap
 {
     background: #f5f5f5;
